--- a/iBus-Universal/MainWindow.xib
+++ b/iBus-Universal/MainWindow.xib
@@ -8,7 +8,6 @@
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="123"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -54,7 +53,6 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">stop.png</string>
 						</object>
-						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
 					<object class="IBUINavigationBar" key="IBUINavigationBar" id="569376398">
@@ -69,7 +67,6 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="IBUIViewController" id="638970362">
 							<object class="IBUINavigationItem" key="IBUINavigationItem" id="427681466">
-								<reference key="IBUINavigationBar"/>
 								<string key="IBUITitle">Item</string>
 							</object>
 							<reference key="IBUIParentViewController" ref="1028899118"/>
@@ -83,7 +80,6 @@
 						<string key="IBUITitle">Favorites</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="869703103">
 							<int key="IBUISystemItemIdentifier">1</int>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="385443022">
@@ -113,7 +109,6 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">route.png</string>
 							</object>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="885853869">
@@ -142,7 +137,6 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">closest.png</string>
 							</object>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="506012443">
@@ -170,7 +164,6 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">setting.png</string>
 							</object>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="170635456">
@@ -191,34 +184,6 @@
 							</object>
 						</object>
 					</object>
-					<object class="IBUINavigationController" id="765138078">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="246062436">
-							<string key="IBUITitle">Offline</string>
-							<object class="NSCustomResource" key="IBUIImage">
-								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">offline.png</string>
-							</object>
-							<reference key="IBUITabBar"/>
-						</object>
-						<reference key="IBUIParentViewController" ref="1034742383"/>
-						<object class="IBUINavigationBar" key="IBUINavigationBar" id="224710049">
-							<nil key="NSNextResponder"/>
-							<int key="NSvFlags">256</int>
-							<string key="NSFrameSize">{320, 44}</string>
-							<bool key="IBUIOpaque">NO</bool>
-							<bool key="IBUIClipsSubviews">YES</bool>
-							<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						</object>
-						<object class="NSMutableArray" key="IBUIViewControllers">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIViewController" id="414441737">
-								<object class="IBUINavigationItem" key="IBUINavigationItem" id="163424265">
-									<string key="IBUITitle">Item</string>
-								</object>
-								<reference key="IBUIParentViewController" ref="765138078"/>
-							</object>
-						</object>
-					</object>
 					<object class="IBUINavigationController" id="430878795">
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="769538610">
 							<string key="IBUITitle">Info</string>
@@ -226,7 +191,6 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">info.png</string>
 							</object>
-							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="536114325">
@@ -244,34 +208,6 @@
 									<string key="IBUITitle">Item</string>
 								</object>
 								<reference key="IBUIParentViewController" ref="430878795"/>
-							</object>
-						</object>
-					</object>
-					<object class="IBUINavigationController" id="470907098">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="858865855">
-							<string key="IBUITitle">Update</string>
-							<object class="NSCustomResource" key="IBUIImage">
-								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">update.png</string>
-							</object>
-							<reference key="IBUITabBar"/>
-						</object>
-						<reference key="IBUIParentViewController" ref="1034742383"/>
-						<object class="IBUINavigationBar" key="IBUINavigationBar" id="302860769">
-							<nil key="NSNextResponder"/>
-							<int key="NSvFlags">256</int>
-							<string key="NSFrameSize">{320, 44}</string>
-							<bool key="IBUIOpaque">NO</bool>
-							<bool key="IBUIClipsSubviews">YES</bool>
-							<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						</object>
-						<object class="NSMutableArray" key="IBUIViewControllers">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIViewController" id="580394609">
-								<object class="IBUINavigationItem" key="IBUINavigationItem" id="512360757">
-									<string key="IBUITitle">Item</string>
-								</object>
-								<reference key="IBUIParentViewController" ref="470907098"/>
 							</object>
 						</object>
 					</object>
@@ -366,9 +302,7 @@
 							<reference ref="897793540"/>
 							<reference ref="691534957"/>
 							<reference ref="167125583"/>
-							<reference ref="765138078"/>
 							<reference ref="430878795"/>
-							<reference ref="470907098"/>
 						</object>
 						<reference key="parent" ref="957960031"/>
 					</object>
@@ -558,41 +492,6 @@
 						<reference key="parent" ref="167125583"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">161</int>
-						<reference key="object" ref="765138078"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="246062436"/>
-							<reference ref="414441737"/>
-							<reference ref="224710049"/>
-						</object>
-						<reference key="parent" ref="1034742383"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">162</int>
-						<reference key="object" ref="246062436"/>
-						<reference key="parent" ref="765138078"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">163</int>
-						<reference key="object" ref="414441737"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="163424265"/>
-						</object>
-						<reference key="parent" ref="765138078"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">164</int>
-						<reference key="object" ref="163424265"/>
-						<reference key="parent" ref="414441737"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">165</int>
-						<reference key="object" ref="224710049"/>
-						<reference key="parent" ref="765138078"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">166</int>
 						<reference key="object" ref="430878795"/>
 						<object class="NSMutableArray" key="children">
@@ -632,41 +531,6 @@
 						<reference key="object" ref="579718460"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">174</int>
-						<reference key="object" ref="470907098"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="858865855"/>
-							<reference ref="580394609"/>
-							<reference ref="302860769"/>
-						</object>
-						<reference key="parent" ref="1034742383"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">175</int>
-						<reference key="object" ref="858865855"/>
-						<reference key="parent" ref="470907098"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">176</int>
-						<reference key="object" ref="580394609"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="512360757"/>
-						</object>
-						<reference key="parent" ref="470907098"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">177</int>
-						<reference key="object" ref="512360757"/>
-						<reference key="parent" ref="580394609"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">178</int>
-						<reference key="object" ref="302860769"/>
-						<reference key="parent" ref="470907098"/>
-					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -683,9 +547,7 @@
 					<string>132.CustomClassName</string>
 					<string>139.CustomClassName</string>
 					<string>148.CustomClassName</string>
-					<string>163.CustomClassName</string>
 					<string>168.CustomClassName</string>
-					<string>176.CustomClassName</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
@@ -704,9 +566,7 @@
 					<string>FavoriteViewController</string>
 					<string>SettingsViewController</string>
 					<string>RouteSearchViewController</string>
-					<string>OfflineViewController</string>
 					<string>InfoViewController</string>
-					<string>CityUpdateViewController</string>
 					<object class="NSMutableDictionary">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
@@ -748,18 +608,6 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">CityUpdateViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">updateTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/CityUpdateViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">FavoriteViewController</string>
 					<string key="superclassName">StopsViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -788,32 +636,19 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">OfflineViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSMutableArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>alwaysOfflineTap:</string>
-							<string>automaticSwitchTap:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/OfflineViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">RouteSearchViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/RouteSearchViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SegmentCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="683860741">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/SettingsViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -827,9 +662,11 @@
 							<string>rangeChangedFinial:</string>
 							<string>resultNumChanged:</string>
 							<string>resultNumChangedFinal:</string>
+							<string>unitChanged:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -844,6 +681,7 @@
 							<string>rangeCell</string>
 							<string>resultCell</string>
 							<string>settingView</string>
+							<string>unitCell</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -851,12 +689,10 @@
 							<string>SliderCell</string>
 							<string>SliderCell</string>
 							<string>UITableView</string>
+							<string>SegmentCell</string>
 						</object>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="683860741">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/SettingsViewController.h</string>
-					</object>
+					<reference key="sourceIdentifier" ref="683860741"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">SliderCell</string>
